@@ -35,7 +35,7 @@
 
 /* Identify a Mach-O object file by peering at the first few bytes of
    it. Also count the number of RW segements. */
-extern Bool ML_(check_macho_and_get_rw_loads)( const void* buf, SizeT size, Int* rw_loads );
+extern Bool ML_(check_macho_and_get_rw_loads)( Int fd, Int* rw_loads );
 
 /* The central function for reading Mach-O debug info.  For the
    object/exe specified by the DebugInfo, find Mach-O sections, then read
